--- a/translationTables/location_id.yaml
+++ b/translationTables/location_id.yaml
@@ -89,4 +89,4 @@
 +LJUDBOK: ref(41)
 
 _DEFAULT_: branchLoc(KONVERSIO, KONVERSIO, KONVERSIO, KONVERSIO) #Oletusarvot / paikkaansa löytämättömät
-
+test
