--- a/translationTables/location_id.yaml
+++ b/translationTables/location_id.yaml
@@ -3,9 +3,9 @@
 
 38: branchLoc(HEL,AVSKRIV)		#AVSKRIV	,AVSKRIVNING
 +AVSKRIV: ref(38)
-43: branchLoc(HEL,TEXTLABBET)		#TEXTLABBET	,TEXTLABBET
+43: branchLoc(EI_KOHAAN, EI_TEXTLABBET)		#TEXTLABBET	,TEXTLABBET
 +TEXTLABBET: ref(43)
-42: branchLoc(EI_KOHAAN, EI_DATABASER)		#DATABASER	,DATABASER
+42: branchLoc(HEL,DATABASER)		#DATABASER	,DATABASER
 +DATABASER: ref(42)
 36: branchLoc(HEL,AVHARKIV)		#AVHARKIV	,AVHARKIV
 +AVHARKIV: ref(36)
